@@ -3,12 +3,15 @@ class ServerSettings:
     def __init__(self, postingChannelID: int = None,
                  weeklyContestAlerts: bool = False,
                  biweeklyContestAlerts: bool = False,
-                 officialDailyAlerts: bool = False):
+                 officialDailyAlerts: bool = False,
+                 contestAlertIntervals: list[int] = None
+                 ):
 
         self.postingChannelID = postingChannelID
         self.weeklyContestAlerts = weeklyContestAlerts
         self.biweeklyContestAlerts = biweeklyContestAlerts
         self.officialDailyAlerts = officialDailyAlerts
+        self.contestAlertIntervals = contestAlertIntervals if contestAlertIntervals is not None else []
 
     def toJSON(self) -> dict:
         return {
@@ -16,6 +19,7 @@ class ServerSettings:
             "weeklyContestAlerts": self.weeklyContestAlerts,
             "biweeklyContestAlerts": self.biweeklyContestAlerts,
             "officialDailyAlerts": self.officialDailyAlerts,
+            "contestAlertIntervals": self.contestAlertIntervals,
         }
 
     def __str__(self) -> str:
@@ -23,6 +27,7 @@ class ServerSettings:
                 f"\t\tweeklyContestAlerts={self.weeklyContestAlerts}\n"
                 f"\t\tbiweeklyContestAlerts={self.biweeklyContestAlerts}\n"
                 f"\t\tofficialDailyAlerts={self.officialDailyAlerts}\n"
+                f"\t\tcontestAlertIntervals={self.contestAlertIntervals}\n"
                )
 
     @staticmethod
@@ -31,5 +36,6 @@ class ServerSettings:
             postingChannelID=settings.get("postingChannelID"),
             weeklyContestAlerts=settings.get("weeklyContestAlerts", False),
             biweeklyContestAlerts=settings.get("biweeklyContestAlerts", False),
-            officialDailyAlerts=settings.get("officialDailyAlerts", False)
+            officialDailyAlerts=settings.get("officialDailyAlerts", False),
+            contestAlertIntervals=settings.get("contestAlertIntervals", [])
         )
